# Feed

./: .gitignore  README.md  pyproject.toml
src/feed/: bbcfuture.py  bbcinpcitures.py  discord.py  main.py  naturenews.py  photosoftheday.py  source.py  state.py  subreddit.py  utils.py  weekinwildlife.py
